--- a/app/translations/nl/package.json
+++ b/app/translations/nl/package.json
@@ -1,6 +1,6 @@
 {
     "title": "Nederlands",
     "direction": "ltr",
-    "author": "Donan Gallagher <donangallagher@gmail.com> and Rutger Laurman <info@lekkerduidelijk.nl>",
+    "author": "Donan Gallagher <donangallagher@gmail.com>, Rutger Laurman <info@lekkerduidelijk.nl> en Gerard Kleine Deters <gerard@kleinedeters.com>",
     "version": "1.0.1"
 }
