Fixed overwritten translations

--- a/app/translations/en/core.json
+++ b/app/translations/en/core.json
@@ -11,7 +11,7 @@
     "routes.error.invalid": "Invalid Panel URL",
     "controller.error.invalid": "Invalid controller",
     "controller.error.action": "Invalid action",
-    "view.error.invalid": "Invalid view:",
+    "view.error.invalid": "Invalid view: ",
     "options.show": "Show options",
     "options.hide": "Hide options",
     "installation": "Installation",
@@ -19,9 +19,9 @@
     "installation.check.text": "Kirby encountered the following issues during installation…",
     "installation.check.retry": "Retry",
     "installation.check.error": "There are some issues!",
-    "installation.check.error.accounts": "/site/accounts is not writable",
-    "installation.check.error.avatars": "/assets/avatars is not writable",
-    "installation.check.error.blueprints": "Please add a /site/blueprints folder",
+    "installation.check.error.accounts": "\/site\/accounts is not writable",
+    "installation.check.error.avatars": "\/assets\/avatars is not writable",
+    "installation.check.error.blueprints": "Please add a \/site\/blueprints folder",
     "installation.check.error.content": "The content folder and all contained files and folders must be writable.",
     "installation.check.error.thumbs": "The thumbs folder must be writable.",
     "installation.signup.username.label": "Create your first account",
@@ -39,7 +39,7 @@
     "login.button": "Login",
     "login.log.error.permissions": "Login log file is not writable.",
     "logout": "Logout",
-    "topbar.error.class.definition": "Missing topbar definition for class:",
+    "topbar.error.class.definition": "Missing topbar definition for class: ",
     "dashboard": "Dashboard",
     "dashboard.index.pages.title": "Pages",
     "dashboard.index.pages.edit": "Edit",
@@ -126,9 +126,9 @@
     "subpages.index.add.first.text": "This page has no subpages yet",
     "subpages.index.add.first.button": "Add the first page",
     "subpages.index.visible": "Visible pages",
-    "subpages.index.visible.help": "Drag invisible pages here to sort them/make them visible.",
+    "subpages.index.visible.help": "Drag invisible pages here to sort them\/make them visible.",
     "subpages.index.invisible": "Invisible pages",
-    "subpages.index.invisible.help": "Drag visible pages here to unsort them/make them invisible.",
+    "subpages.index.invisible.help": "Drag visible pages here to unsort them\/make them invisible.",
     "subpages.add.error": "This page is not allowed to have subpages",
     "subpages.add.error.more": "This page cannot have any more subpages",
     "subpages.error.missing": "The page could not be found",
@@ -147,12 +147,12 @@
     "files.add.error.mime.forbidden": "Forbidden mime type",
     "files.add.error.htaccess": "htaccess files cannot be uploaded",
     "files.add.error.invisible": "Invisible files cannot be uploaded",
-    "files.add.blueprint.type.error": "Page only allows:",
-    "files.add.blueprint.size.error": "Page only allows file size of",
+    "files.add.blueprint.type.error": "Page only allows: ",
+    "files.add.blueprint.size.error": "Page only allows file size of ",
     "files.show.name.label": "Filename",
-    "files.show.info.label": "Type / Size / Dimensions",
+    "files.show.info.label": "Type \/ Size \/ Dimensions",
     "files.show.link.label": "Public link",
-    "files.show.open": "Show/download file",
+    "files.show.open": "Show\/download file",
     "files.show.back": "Back",
     "files.show.replace": "Replace",
     "files.show.delete": "Delete",
@@ -199,7 +199,7 @@
     "users.form.error.update.rights": "You are not allowed to update this user",
     "users.form.error.create": "The user could not be created",
     "users.form.error.permissions.title": "The account folder is not writable",
-    "users.form.error.permissions.text": "Please make sure that /site/accounts exists and is writable.",
+    "users.form.error.permissions.text": "Please make sure that \/site\/accounts exists and is writable.",
     "users.delete.headline": "Do you really want to delete this user?",
     "users.delete.error": "The user could not be deleted",
     "users.delete.error.permission": "You are not allowed to delete users",
@@ -209,7 +209,7 @@
     "users.avatar.click": "…or click to upload",
     "users.avatar.error.type": "You can only upload JPG, PNG and GIF files",
     "users.avatar.error.folder.headline": "The avatar folder is not writable",
-    "users.avatar.error.folder.text": "Please create the folder <strong>/assets/avatars</strong> and make it writable to upload profile pictures.",
+    "users.avatar.error.folder.text": "Please create the folder <strong>\/assets\/avatars<\/strong> and make it writable to upload profile pictures.",
     "users.avatar.error.permission": "You are not allowed to change the avatar",
     "users.avatar.delete.error": "The profile picture could not be deleted",
     "users.avatar.delete.error.permission": "You are not allowed to delete the avatar of this user",
@@ -258,7 +258,7 @@
     "fields.number.label": "Number",
     "fields.number.placeholder": "#",
     "fields.page.label": "Page",
-    "fields.page.placeholder": "path/to/page",
+    "fields.page.placeholder": "path\/to\/page",
     "fields.password.label": "Password",
     "fields.structure.add": "Add",
     "fields.structure.add.first": "Add the first entry",
