--- a/app/translations/nl/core.json
+++ b/app/translations/nl/core.json
@@ -1,12 +1,17 @@
 {
     "cancel": "Annuleren",
     "add": "Toevoegen",
+    "addit": "Add & Edit",
     "save": "Opslaan",
     "saved": "Opgeslagen!",
     "change": "Wijzig",
     "delete": "Verwijder",
     "insert": "Toevoegen",
     "ok": "Ok",
+    "routes.error.invalid": "Invalid Panel URL",
+    "controller.error.invalid": "Invalid controller",
+    "controller.error.action": "Invalid action",
+    "view.error.invalid": "Invalid view:",
     "options.show": "Toon opties",
     "options.hide": "Verberg opties",
     "installation": "Installatie",
@@ -14,9 +19,9 @@
     "installation.check.text": "Kirby vond de volgende fouten tijdens de installatie...",
     "installation.check.retry": "Opnieuw proberen",
     "installation.check.error": "Er zijn een aantal problemen!",
-    "installation.check.error.accounts": "\/site\/accounts heeft geen schrijfrechten",
-    "installation.check.error.avatars": "\/assets\/avatars heeft geen schrijfrechten",
-    "installation.check.error.blueprints": "Voeg een \/site\/blueprints map toe",
+    "installation.check.error.accounts": "/site/accounts heeft geen schrijfrechten",
+    "installation.check.error.avatars": "/assets/avatars heeft geen schrijfrechten",
+    "installation.check.error.blueprints": "Voeg een /site/blueprints map toe",
     "installation.check.error.content": "De contentmap en alle bestanden hierin moeten schrijfrechten hebben.",
     "installation.check.error.thumbs": "De thumbs-map moet schrijfrechten hebben.",
     "installation.signup.username.label": "Maak je eerste account",
@@ -32,7 +37,9 @@
     "login.password.label": "Wachtwoord",
     "login.error": "Ongeldige gebruikersnaam of wachtwoord",
     "login.button": "Login",
+    "login.log.error.permissions": "Login log file is not writable.",
     "logout": "Uitloggen",
+    "topbar.error.class.definition": "Missing topbar definition for class:",
     "dashboard": "Dashboard",
     "dashboard.index.pages.title": "Pagina's",
     "dashboard.index.pages.edit": "Wijzig",
@@ -53,6 +60,7 @@
     "metatags.version.panel": "Panel versie",
     "metatags.back": "Terug naar het dashboard",
     "metatags.files": "Sitebestanden",
+    "site.delete.error": "The site cannot be deleted",
     "pages.show.settings": "Pagina-opties",
     "pages.show.preview": "Open voorbeeld",
     "pages.show.changeurl": "Verander URL",
@@ -83,6 +91,7 @@
     "pages.add.url.close": "Sluiten",
     "pages.add.url.help": "Toegestaan: a-z (kleine letters) en standaard streepjes (-)",
     "pages.add.template.label": "Template",
+    "pages.add.error.create": "The page could not be created",
     "pages.add.error.title": "De titel ontbreekt",
     "pages.add.error.template": "Het template ontbreekt",
     "pages.add.error.max.headline": "Geen nieuwe pagina's toegestaan",
@@ -91,13 +100,18 @@
     "pages.url.uid.label.option": "Maak op basis van titel",
     "pages.url.error.exists": "Er bestaat al een pagina met deze URL-toevoeging",
     "pages.url.error.move": "De URL-toevoeging kan niet worden gewijzigd",
+    "pages.url.error.rights": "You cannot change the URL of this page",
+    "pages.url.home.error.error": "The URL for the home and error pages cannot be changed",
+    "pages.toggle.position": "Position",
+    "pages.toggle.invisible": "invisible",
     "pages.toggle.publish": "Wil je de status wijzigen naar **zichtbaar**?",
     "pages.toggle.hide": "Wil je de status wijzigen naar **onzichtbaar**?",
+    "pages.toggle.error.error": "The status of the error page cannot be changed",
     "pages.delete.headline": "Wil je de pagina verwijderen?",
     "pages.delete.error.home.headline": "De homepage kan niet worden verwijderd",
     "pages.delete.error.home.text": "Je probeert de homepage te verwijderen. Dit is niet mogelijk en het zou kunnen leiden tot ongewenste resultaten.",
     "pages.delete.error.error.headline": "De fout-pagina kan niet worden verwijderd",
-    "pages.delete.error.error.text": "Je probeert de fout-pagina te verwijderen. Dit is niet mogelijk en het zou kunnen leiden tot ongewenste resultaten. ",
+    "pages.delete.error.error.text": "Je probeert de fout-pagina te verwijderen. Dit is niet mogelijk en het zou kunnen leiden tot ongewenste resultaten.",
     "pages.delete.error.children.headline": "Deze pagina kan niet worden verwijderd",
     "pages.delete.error.children.text": "Deze pagina heeft subpagina's en kan niet worden verwijderd. Verwijder eerst de subpagina's.",
     "pages.delete.error.blocked.headline": "Deze pagina kan niet worden verwijderd",
@@ -115,6 +129,8 @@
     "subpages.index.visible.help": "Sleep onzichtbare pagina's hiernaartoe om ze zichtbaar te maken.",
     "subpages.index.invisible": "Onzichtbare pagina's",
     "subpages.index.invisible.help": "Sleep zichtbare pagina's hiernaartoe om ze onzichtbaar te maken.",
+    "subpages.add.error": "This page is not allowed to have subpages",
+    "subpages.add.error.more": "This page cannot have any more subpages",
     "subpages.error.missing": "De pagina kan niet worden gevonden",
     "files": "Files",
     "files.index.headline": "Bestanden voor",
@@ -124,10 +140,19 @@
     "files.index.upload.first.button": "Upload het eerste bestand",
     "files.index.edit": "Wijzgen",
     "files.index.delete": "Verwijderen",
+    "files.index.error.disabled": "The page is not allowed to have any files",
+    "files.add.error.max": "The maximum number of files for the current page has been reached.",
+    "files.add.error.extension.missing": "You cannot upload files without extension",
+    "files.add.error.extension.forbidden": "Forbidden file extension",
+    "files.add.error.mime.forbidden": "Forbidden mime type",
+    "files.add.error.htaccess": "htaccess files cannot be uploaded",
+    "files.add.error.invisible": "Invisible files cannot be uploaded",
+    "files.add.blueprint.type.error": "Page only allows:",
+    "files.add.blueprint.size.error": "Page only allows file size of",
     "files.show.name.label": "Bestandsnaam",
-    "files.show.info.label": "Type \/ grootte \/ afmetingen",
+    "files.show.info.label": "Type / grootte / afmetingen",
     "files.show.link.label": "Publieke link",
-    "files.show.open": "Bekijk\/download bestand",
+    "files.show.open": "Bekijk/download bestand",
     "files.show.back": "Terug",
     "files.show.replace": "Vervangen",
     "files.show.delete": "Verwijderen",
@@ -171,19 +196,29 @@
     "users.form.back": "Terug naar gebruikers",
     "users.form.error.password.confirm": "Bevestig je wachtwoord",
     "users.form.error.update": "De gebruiker kan niet worden gewijzigd",
+    "users.form.error.update.rights": "You are not allowed to update this user",
     "users.form.error.create": "De gebruiker kan niet worden aangemaakt",
     "users.form.error.permissions.title": "De 'accounts'-map heeft niet voldoende rechten.",
-    "users.form.error.permissions.text": "Zorg ervoor dat de map 'site\/accounts' bestaat en schrijfrechten heeft.",
+    "users.form.error.permissions.text": "Zorg ervoor dat de map 'site/accounts' bestaat en schrijfrechten heeft.",
     "users.delete.headline": "Wil je deze gebruiker verwijderen?",
     "users.delete.error": "De gebruiker kan niet worden verwijderd",
+    "users.delete.error.permission": "You are not allowed to delete users",
+    "users.delete.error.permission.single": "You are not allowed to delete this user",
+    "users.delete.error.lastadmin": "You cannot delete the last admin",
     "users.avatar.drop": "Sleep een avatar-afbeelding hiernaartoe...",
     "users.avatar.click": "... of klik hier om afbeelding te selecteren",
     "users.avatar.error.type": "Je kunt alleen .jpg, .png en .gif bestanden uploaden",
     "users.avatar.error.folder.headline": "De avatar-map heeft geen schrijfrechten.",
-    "users.avatar.error.folder.text": "Zorg ervoor dat de map <strong>\/assets\/avatars<\/strong> bestaat en schrijfrechten heeft om avatars te uploaden.",
+    "users.avatar.error.folder.text": "Zorg ervoor dat de map <strong>/assets/avatars</strong> bestaat en schrijfrechten heeft om avatars te uploaden.",
+    "users.avatar.error.permission": "You are not allowed to change the avatar",
     "users.avatar.delete.error": "De avatar kan niet worden verwijderd",
+    "users.avatar.delete.error.permission": "You are not allowed to delete the avatar of this user",
     "users.avatar.delete.success": "De avatar is verwijderd",
+    "users.avatar.missing": "This user has no avatar",
     "users.error.missing": "De gebruiker kan niet worden gevonden",
+    "user.error.lastadmin": "You are the only admin. This cannot be changed.",
+    "form.error.missing": "The form cannot be found",
+    "form.construct.error.invalid": "Invalid form construction method",
     "fields.required": "Verplicht",
     "fields.date.label": "Datum",
     "fields.date.months": [
@@ -223,15 +258,17 @@
     "fields.number.label": "Nummer",
     "fields.number.placeholder": "#",
     "fields.page.label": "Pagina",
-    "fields.page.placeholder": "pad\/naar\/pagina",
+    "fields.page.placeholder": "pad/naar/pagina",
     "fields.password.label": "Wachtwoord",
     "fields.structure.add": "Toevoegen",
     "fields.structure.add.first": "Voeg het eerste item toe",
     "fields.structure.empty": "Nog geen items.",
+    "fields.structure.entry.error": "The item could not be found",
     "fields.structure.cancel": "Annuleren",
     "fields.structure.save": "Ok",
     "fields.structure.edit": "Wijzigen",
     "fields.structure.delete": "Verwijderen",
+    "fields.structure.delete.label": "Do you really want to delete this entry?",
     "fields.tags.label": "Tags",
     "fields.tel.label": "Telefoon",
     "fields.textarea.buttons.bold.label": "Dikgedrukte tekst",
@@ -246,6 +283,10 @@
     "fields.toggle.no": "Nee",
     "fields.toggle.on": "Aan",
     "fields.toggle.off": "Uit",
+    "fields.error.missing.controller": "The field controller file is missing",
+    "fields.error.missing.class": "The field controller class is missing",
+    "fields.error.route.invalid": "Invalid field route",
+    "fields.error.extended": "The field cannot be extended",
     "editor.link.url.label": "URL invoegen",
     "editor.link.text.label": "Link-tekst",
     "editor.link.text.help": "De link-tekst is niet verplicht",
@@ -255,6 +296,8 @@
     "editor.email.text.help": "De link-tekst is niet verplicht",
     "editor.file.empty": "Deze pagina heeft geen bestanden",
     "editor.image.empty": "Deze pagina heeft geen afbeeldingen",
+    "autocomplete.method.error": "Invalid autocomplete method",
+    "blueprints.error.default.missing": "Missing default blueprint",
     "error": "Foutmelding",
     "error.headline": "Foutmelding"
 }
