Latest language updates

--- a/app/translations/fr/core.json
+++ b/app/translations/fr/core.json
@@ -8,9 +8,9 @@
     "delete": "Supprimer",
     "insert": "Insérer",
     "ok": "Ok",
-    "routes.error.invalid": "Invalid Panel URL",
+    "routes.error.invalid": "URL du panel invalide",
     "controller.error.invalid": "Invalid controller",
-    "controller.error.action": "Invalid action",
+    "controller.error.action": "Action invalide",
     "view.error.invalid": "Invalid view:",
     "options.show": "Afficher les options",
     "options.hide": "Masquer les options",
@@ -60,7 +60,7 @@
     "metatags.version.panel": "Version du Panel",
     "metatags.back": "Retour au tableau de bord",
     "metatags.files": "Fichiers du site",
-    "site.delete.error": "The site cannot be deleted",
+    "site.delete.error": "Le site ne peut pas être supprimé",
     "pages.show.settings": "Options de la page",
     "pages.show.preview": "Prévisualiser",
     "pages.show.changeurl": "Modifier l’URL",
@@ -91,7 +91,7 @@
     "pages.add.url.close": "Fermer",
     "pages.add.url.help": "Format : minuscules a-z, chiffres 0-9 et tiret simple",
     "pages.add.template.label": "Modèle de page",
-    "pages.add.error.create": "The page could not be created",
+    "pages.add.error.create": "La page n'a pas pu être créée",
     "pages.add.error.title": "Il n’y a pas de titre",
     "pages.add.error.template": "Vous n’avez pas choisi de modèle",
     "pages.add.error.max.headline": "La création de nouvelles pages secondaires n’est pas autorisé pour cette page",
@@ -100,13 +100,13 @@
     "pages.url.uid.label.option": "Créer à partir du titre",
     "pages.url.error.exists": "Une page du même nom existe déjà",
     "pages.url.error.move": "L’identifiant de l’URL n’a pu être changé",
-    "pages.url.error.rights": "You cannot change the URL of this page",
-    "pages.url.home.error.error": "The URL for the home and error pages cannot be changed",
+    "pages.url.error.rights": "Vous ne pouvez pas modifier l'URL de cette page",
+    "pages.url.home.error.error": "L'URL de la page d'accueil et de la page d'erreurs ne peut pas être modifiée",
     "pages.toggle.position": "Position",
     "pages.toggle.invisible": "invisible",
     "pages.toggle.publish": "Voulez-vous vraiment modifier le statut de cette page en **visible**?",
     "pages.toggle.hide": "Voulez-vous vraiment modifier le statut de cette page en **invisible**?",
-    "pages.toggle.error.error": "The status of the error page cannot be changed",
+    "pages.toggle.error.error": "Le statut de la page d'erreur ne peut pas être modifié",
     "pages.delete.headline": "Voulez-vous vraiment supprimer définitivement cette page ?",
     "pages.delete.error.home.headline": "La page d’accueil ne peut être supprimée",
     "pages.delete.error.home.text": "Vous essayez de supprimer la page d’accueil. Ce n’est pas possible et cela aurait des conséquences fâcheuses.",
@@ -129,8 +129,8 @@
     "subpages.index.visible.help": "Glisser ici une page invisible pour la classer et la rendre visible.",
     "subpages.index.invisible": "Pages invisibles",
     "subpages.index.invisible.help": "Glisser ici une page pour la rendre invisible.",
-    "subpages.add.error": "This page is not allowed to have subpages",
-    "subpages.add.error.more": "This page cannot have any more subpages",
+    "subpages.add.error": "Cette page ne peut pas avoir de sous-pages",
+    "subpages.add.error.more": "Cette page ne peut plus avoir de sous-pages supplémentaires",
     "subpages.error.missing": "La page n’a pu être trouvée",
     "files": "Fichiers",
     "files.index.headline": "Fichiers pour la page :",
