--- a/app/translations/nb/core.json
+++ b/app/translations/nb/core.json
@@ -1,16 +1,16 @@
 {
     "cancel": "Avbryt",
     "add": "Legg til",
-    "addit": "Add & Edit",
+    "addit": "Legg til og rediger",
     "save": "Lagre",
     "saved": "Lagret!",
-    "change": "Change",
+    "change": "Endre",
     "delete": "Slett",
     "insert": "Sett Inn",
     "ok": "Ok",
     "routes.error.invalid": "Invalid Panel URL",
     "controller.error.invalid": "Invalid controller",
-    "controller.error.action": "Invalid action",
+    "controller.error.action": "Ugyldig handling",
     "view.error.invalid": "Invalid view:",
     "options.show": "Vis alternativer",
     "options.hide": "Skjul alternativer",
@@ -37,7 +37,7 @@
     "login.password.label": "Passord",
     "login.error": "Brukernavn eller passord er feil",
     "login.button": "Logg inn",
-    "login.log.error.permissions": "Login log file is not writable.",
+    "login.log.error.permissions": "Logg inn loggfilen er ikke skrivbar.",
     "logout": "Logg ut",
     "topbar.error.class.definition": "Missing topbar definition for class:",
     "dashboard": "Dashboard",
@@ -51,23 +51,23 @@
     "dashboard.index.metatags.edit": "Rediger",
     "dashboard.index.history.title": "Dine siste endringer",
     "dashboard.index.history.text": "Dine siste endrede sider vil vises her for å gjøre det enkelt å finne dem igjen senere.",
-    "dashboard.index.license.title": "Kirby license",
+    "dashboard.index.license.title": "Kirby lisens",
     "metatags": "Nettsted variabler",
-    "metatags.info": "Kirby info",
-    "metatags.license": "Kirby license",
-    "metatags.version.toolkit": "Toolkit version",
-    "metatags.version.kirby": "Kirby version",
-    "metatags.version.panel": "Panel version",
+    "metatags.info": "Kirby informasjon",
+    "metatags.license": "Kirby lisens",
+    "metatags.version.toolkit": "Toolkit versjon",
+    "metatags.version.kirby": "Kirby versjon",
+    "metatags.version.panel": "Panel versjon",
     "metatags.back": "Tilbake til dashboardet",
-    "metatags.files": "Site files",
-    "site.delete.error": "The site cannot be deleted",
+    "metatags.files": "Sidefiler",
+    "site.delete.error": "Siden kan ikke slettes",
     "pages.show.settings": "Sideinnstillinger",
     "pages.show.preview": "Åpne forhåndsvisning",
     "pages.show.changeurl": "Endre URL",
-    "pages.show.invisible": "Status: invisible",
-    "pages.show.visible": "Status: visible",
-    "pages.show.changes.text": "You have unsaved changes!",
-    "pages.show.changes.button": "Discard",
+    "pages.show.invisible": "Status: usynlig",
+    "pages.show.visible": "Status: synlig",
+    "pages.show.changes.text": "Du har ulagrede endringer!",
+    "pages.show.changes.button": "Forkast",
     "pages.show.delete": "Slett denne siden",
     "pages.show.subpages.title": "Sider",
     "pages.show.subpages.edit": "Rediger",
@@ -91,7 +91,7 @@
     "pages.add.url.close": "Lukk",
     "pages.add.url.help": "Format: små bokstaver a-z, 0-9 og vanlige bindestreker",
     "pages.add.template.label": "Mal",
-    "pages.add.error.create": "The page could not be created",
+    "pages.add.error.create": "Siden kunne ikke opprettes",
     "pages.add.error.title": "Tittelen mangler",
     "pages.add.error.template": "Malen mangler",
     "pages.add.error.max.headline": "Ingen nye sider tillat",
@@ -102,8 +102,8 @@
     "pages.url.error.move": "Appendiks kunne ikke bli endret",
     "pages.url.error.rights": "You cannot change the URL of this page",
     "pages.url.home.error.error": "The URL for the home and error pages cannot be changed",
-    "pages.toggle.position": "Position",
-    "pages.toggle.invisible": "invisible",
+    "pages.toggle.position": "Posisjon",
+    "pages.toggle.invisible": "usynlig",
     "pages.toggle.publish": "Do you really want to change the status of this page to **visible?**",
     "pages.toggle.hide": "Do you really want to change the status of this page to **invisible?**",
     "pages.toggle.error.error": "The status of the error page cannot be changed",
@@ -216,7 +216,7 @@
     "users.avatar.delete.success": "Profil bildet har blitt slettet",
     "users.avatar.missing": "This user has no avatar",
     "users.error.missing": "Brukeren kunne ikke bli funnet",
-    "user.error.lastadmin": "You are the only admin. This cannot be changed.",
+    "user.error.lastadmin": "Du er den eneste administrator. Dette kan ikke endres.",
     "form.error.missing": "The form cannot be found",
     "form.construct.error.invalid": "Invalid form construction method",
     "fields.required": "Påkrevd",
@@ -268,7 +268,7 @@
     "fields.structure.save": "Lagre",
     "fields.structure.edit": "Rediger",
     "fields.structure.delete": "Slett",
-    "fields.structure.delete.label": "Do you really want to delete this entry?",
+    "fields.structure.delete.label": "Ønsker du virkelig å slette denne oppføringen?",
     "fields.tags.label": "Tagger",
     "fields.tel.label": "Mobil",
     "fields.textarea.buttons.bold.label": "Tykk tekst",
