--- a/app/translations/es_ES/core.json
+++ b/app/translations/es_ES/core.json
@@ -1,17 +1,17 @@
 {
     "cancel": "Cancelar",
     "add": "Añadir",
-    "addit": "Add & Edit",
+    "addit": "Añadir y Editar",
     "save": "Guardar",
     "saved": "¡Guardado!",
-    "change": "Change",
+    "change": "Cambiar",
     "delete": "Eliminar",
     "insert": "Insertar",
     "ok": "OK",
-    "routes.error.invalid": "Invalid Panel URL",
-    "controller.error.invalid": "Invalid controller",
-    "controller.error.action": "Invalid action",
-    "view.error.invalid": "Invalid view:",
+    "routes.error.invalid": "La URL del Panel es inválida",
+    "controller.error.invalid": "Controlador inválido",
+    "controller.error.action": "Acción inválida",
+    "view.error.invalid": "Vista inválida",
     "options.show": "Mostrar opciones",
     "options.hide": "Ocultar opciones",
     "installation": "Instalación",
@@ -37,9 +37,9 @@
     "login.password.label": "Contraseña",
     "login.error": "Nombre de usuario o contraseña incorrecto",
     "login.button": "Acceder",
-    "login.log.error.permissions": "Login log file is not writable.",
+    "login.log.error.permissions": "El archivo de logs de inicios de sesión no tiene permisos de escritura",
     "logout": "Cerrar sesión",
-    "topbar.error.class.definition": "Missing topbar definition for class:",
+    "topbar.error.class.definition": "Falta la definición de topbar para la clase:",
     "dashboard": "Tablero",
     "dashboard.index.pages.title": "Páginas",
     "dashboard.index.pages.edit": "Editar",
@@ -51,23 +51,23 @@
     "dashboard.index.metatags.edit": "Editar",
     "dashboard.index.history.title": "Tus últimas actualizaciones",
     "dashboard.index.history.text": "Las páginas modificadas recientemente se mostrarán aquí para que puedas encontrarlas fácilmente.",
-    "dashboard.index.license.title": "Kirby license",
+    "dashboard.index.license.title": "Licencia de Kirby",
     "metatags": "Variables del sitio",
-    "metatags.info": "Kirby info",
-    "metatags.license": "Kirby license",
-    "metatags.version.toolkit": "Toolkit version",
-    "metatags.version.kirby": "Kirby version",
-    "metatags.version.panel": "Panel version",
+    "metatags.info": "Información de Kirby",
+    "metatags.license": "Licencia de Kirby",
+    "metatags.version.toolkit": "Versión del Toolkit",
+    "metatags.version.kirby": "Versión de Kirby",
+    "metatags.version.panel": "Versión del Panel",
     "metatags.back": "Volver al tablero",
-    "metatags.files": "Site files",
-    "site.delete.error": "The site cannot be deleted",
+    "metatags.files": "Archivos del sitio",
+    "site.delete.error": "No se puede eliminar el sitio",
     "pages.show.settings": "Ajustes de página",
     "pages.show.preview": "Abrir previsualización",
     "pages.show.changeurl": "Cambiar URL",
-    "pages.show.invisible": "Status: invisible",
-    "pages.show.visible": "Status: visible",
-    "pages.show.changes.text": "You have unsaved changes!",
-    "pages.show.changes.button": "Discard",
+    "pages.show.invisible": "Estado: Invisible",
+    "pages.show.visible": "Estado: Visible",
+    "pages.show.changes.text": "¡Tienes cambios sin guardar!",
+    "pages.show.changes.button": "Descartar",
     "pages.show.delete": "Eliminar esta página",
     "pages.show.subpages.title": "Páginas",
     "pages.show.subpages.edit": "Editar",
@@ -91,7 +91,7 @@
     "pages.add.url.close": "Cerrar",
     "pages.add.url.help": "Formato: minúsculas a-z, 0-9 y guiones",
     "pages.add.template.label": "Plantilla",
-    "pages.add.error.create": "The page could not be created",
+    "pages.add.error.create": "No se ha podido crear la página",
     "pages.add.error.title": "Falta el título",
     "pages.add.error.template": "Falta la plantilla",
     "pages.add.error.max.headline": "No se permite añadir nuevas páginas",
@@ -100,13 +100,13 @@
     "pages.url.uid.label.option": "Crear a partir del título",
     "pages.url.error.exists": "Ya existe una página con la misma URL",
     "pages.url.error.move": "No se ha podido cambiar la URL",
-    "pages.url.error.rights": "You cannot change the URL of this page",
-    "pages.url.home.error.error": "The URL for the home and error pages cannot be changed",
-    "pages.toggle.position": "Position",
+    "pages.url.error.rights": "No se puede cambiar la URL de esta página",
+    "pages.url.home.error.error": "No se puede cambiar la URL de las páginas de inicio y error",
+    "pages.toggle.position": "Posición",
     "pages.toggle.invisible": "invisible",
-    "pages.toggle.publish": "Do you really want to change the status of this page to **visible?**",
-    "pages.toggle.hide": "Do you really want to change the status of this page to **invisible?**",
-    "pages.toggle.error.error": "The status of the error page cannot be changed",
+    "pages.toggle.publish": "¿Realmente quieres eliminar esta cambiar el estado de esta página a **visible?**",
+    "pages.toggle.hide": "¿Realmente quieres cambiar el estado de esta página a **invisible?**",
+    "pages.toggle.error.error": "No se puede cambiar el estado de la página de error",
     "pages.delete.headline": "¿Realmente quieres eliminar esta página?",
     "pages.delete.error.home.headline": "No se puede eliminar la página de inicio",
     "pages.delete.error.home.text": "Estás intentando eliminar la página de inicio. Esto no es posible y podría causar efectos indeseados.",
@@ -129,8 +129,8 @@
     "subpages.index.visible.help": "Arrastra páginas invisibles aquí para ordenarlas/hacerlas visibles.",
     "subpages.index.invisible": "Páginas invisibles",
     "subpages.index.invisible.help": "Arrastra páginas visibles aquí para desordenarlas/hacerlas invisibles.",
-    "subpages.add.error": "This page is not allowed to have subpages",
-    "subpages.add.error.more": "This page cannot have any more subpages",
+    "subpages.add.error": "Esta página no admite subpáginas",
+    "subpages.add.error.more": "Esta página no admite más sumpáginas",
     "subpages.error.missing": "No se ha podido encontrar la página",
     "files": "Archivos",
     "files.index.headline": "Archivos para",
@@ -140,15 +140,15 @@
     "files.index.upload.first.button": "Sube un primer archivo",
     "files.index.edit": "Editar",
     "files.index.delete": "Eliminar",
-    "files.index.error.disabled": "The page is not allowed to have any files",
-    "files.add.error.max": "The maximum number of files for the current page has been reached.",
-    "files.add.error.extension.missing": "You cannot upload files without extension",
-    "files.add.error.extension.forbidden": "Forbidden file extension",
-    "files.add.error.mime.forbidden": "Forbidden mime type",
-    "files.add.error.htaccess": "htaccess files cannot be uploaded",
-    "files.add.error.invisible": "Invisible files cannot be uploaded",
-    "files.add.blueprint.type.error": "Page only allows:",
-    "files.add.blueprint.size.error": "Page only allows file size of",
+    "files.index.error.disabled": "La página no admite archivos",
+    "files.add.error.max": "Se ha alcanzado el número máximo de archivos para esta página",
+    "files.add.error.extension.missing": "No se pueden subir archivos sin extensión",
+    "files.add.error.extension.forbidden": "Extensión de archivo prohibida",
+    "files.add.error.mime.forbidden": "mime type prohibido",
+    "files.add.error.htaccess": "No se pueden subir archivos htacces",
+    "files.add.error.invisible": "No se pueden subir archivos invisibles",
+    "files.add.blueprint.type.error": "La página únicamente admite:",
+    "files.add.blueprint.size.error": "La página únicamente admite tamaño de archivo de",
     "files.show.name.label": "Nombre del archivo",
     "files.show.info.label": "Tipo / Tamaño / Dimensiones",
     "files.show.link.label": "Enlace público",
@@ -196,29 +196,29 @@
     "users.form.back": "Volver a Usuarios",
     "users.form.error.password.confirm": "Por favor, confirma tu contraseña",
     "users.form.error.update": "No se ha podido actualizar el usuario",
-    "users.form.error.update.rights": "You are not allowed to update this user",
+    "users.form.error.update.rights": "No dispones de autorización para actualizar este usuario",
     "users.form.error.create": "No se ha podido crear el usuario",
     "users.form.error.permissions.title": "La carpeta de cuentas no tiene permisos de escritura",
     "users.form.error.permissions.text": "Por favor, asegúrate de que /site/accounts existe y tiene permisos de escritura.",
     "users.delete.headline": "¿Realmente quieres eliminar este usuario?",
     "users.delete.error": "No se ha podido eliminar el usuario",
-    "users.delete.error.permission": "You are not allowed to delete users",
-    "users.delete.error.permission.single": "You are not allowed to delete this user",
-    "users.delete.error.lastadmin": "You cannot delete the last admin",
+    "users.delete.error.permission": "No dispones de autorización para eliminar usuarios",
+    "users.delete.error.permission.single": "No dispones de autorización para eliminar este usuario",
+    "users.delete.error.lastadmin": "No puedes eliminar al último admin",
     "users.avatar.drop": "Suelta una foto de perfil aquí…",
     "users.avatar.click": "…o haz clic para subir",
     "users.avatar.error.type": "Sólo se pueden subir archivos JPG, PNG y GIF",
     "users.avatar.error.folder.headline": "La carpeta de fotos de perfil no tiene permisos de escritura",
     "users.avatar.error.folder.text": "Por favor, crea la carpeta <strong>/assets/avatars</strong> y asegúrate de que tiene permisos de escritura para poder subir fotos de perfil.",
-    "users.avatar.error.permission": "You are not allowed to change the avatar",
+    "users.avatar.error.permission": "No dispones de autorización para cambiar el avatar",
     "users.avatar.delete.error": "No se ha podido eliminar la foto de perfil",
-    "users.avatar.delete.error.permission": "You are not allowed to delete the avatar of this user",
+    "users.avatar.delete.error.permission": "No dispones de autorización para eliminar el avatar de este usuario",
     "users.avatar.delete.success": "Se ha eliminado la foto de perfil",
-    "users.avatar.missing": "This user has no avatar",
+    "users.avatar.missing": "Este usuario no tiene avatar",
     "users.error.missing": "Usuario no encontrado",
-    "user.error.lastadmin": "You are the only admin. This cannot be changed.",
-    "form.error.missing": "The form cannot be found",
-    "form.construct.error.invalid": "Invalid form construction method",
+    "user.error.lastadmin": "Eres el único administrador. Esto no se puede cambiar.",
+    "form.error.missing": "No se ha encontrado el formulario",
+    "form.construct.error.invalid": "Método de construcción de formulario inválido",
     "fields.required": "Obligatorio",
     "fields.date.label": "Fecha",
     "fields.date.months": [
@@ -263,12 +263,12 @@
     "fields.structure.add": "Añadir",
     "fields.structure.add.first": "Añadir la primera entrada",
     "fields.structure.empty": "Aún no hay entradas.",
-    "fields.structure.entry.error": "The item could not be found",
+    "fields.structure.entry.error": "No se ha podido encontrar el item",
     "fields.structure.cancel": "Cancelar",
     "fields.structure.save": "Guardar",
     "fields.structure.edit": "Editar",
     "fields.structure.delete": "Eliminar",
-    "fields.structure.delete.label": "Do you really want to delete this entry?",
+    "fields.structure.delete.label": "¿Realmente quieres eliminar esta entrada?",
     "fields.tags.label": "Etiquetas",
     "fields.tel.label": "Teléfono",
     "fields.textarea.buttons.bold.label": "Negrita",
@@ -283,10 +283,10 @@
     "fields.toggle.no": "No",
     "fields.toggle.on": "On",
     "fields.toggle.off": "Off",
-    "fields.error.missing.controller": "The field controller file is missing",
-    "fields.error.missing.class": "The field controller class is missing",
-    "fields.error.route.invalid": "Invalid field route",
-    "fields.error.extended": "The field cannot be extended",
+    "fields.error.missing.controller": "Falta el archivo del controlador de campos",
+    "fields.error.missing.class": "Falta la clase del controlador de campos",
+    "fields.error.route.invalid": "Ruta del campo inválida",
+    "fields.error.extended": "El campo no puede ser extendido",
     "editor.link.url.label": "Insertar URL",
     "editor.link.text.label": "Texto del enlace",
     "editor.link.text.help": "El texto del enlace es opcional",
@@ -296,8 +296,8 @@
     "editor.email.text.help": "El texto del enlace es opcional",
     "editor.file.empty": "Esta página no tiene archivos",
     "editor.image.empty": "Esta página no tiene imágenes",
-    "autocomplete.method.error": "Invalid autocomplete method",
-    "blueprints.error.default.missing": "Missing default blueprint",
+    "autocomplete.method.error": "Método de autocompletado inválido",
+    "blueprints.error.default.missing": "Falta el blueprint por defecto",
     "error": "Error",
     "error.headline": "Error"
 }
