--- a/app/translations/pl/core.json
+++ b/app/translations/pl/core.json
@@ -1,10 +1,10 @@
 {
     "cancel": "Anuluj",
     "add": "Dodaj",
-    "addit": "Add & Edit",
+    "addit": "Dodaj i Edytuj",
     "save": "Zapisz",
     "saved": "Zapisano!",
-    "change": "Change",
+    "change": "Zmień",
     "delete": "Usuń",
     "insert": "Wstaw",
     "ok": "Ok",
@@ -42,7 +42,7 @@
     "topbar.error.class.definition": "Missing topbar definition for class:",
     "dashboard": "Panel administracyjny",
     "dashboard.index.pages.title": "Strony",
-    "dashboard.index.pages.edit": "Edit",
+    "dashboard.index.pages.edit": "Edytuj",
     "dashboard.index.pages.add": "Dodaj",
     "dashboard.index.site.title": "Adres URL Twojej strony",
     "dashboard.index.account.title": "Twoje konto",
@@ -51,30 +51,30 @@
     "dashboard.index.metatags.edit": "Edytuj",
     "dashboard.index.history.title": "Twoje ostatnie modyfikacje",
     "dashboard.index.history.text": "Twoje ostatnio zmodyfikowane strony będą wyświetlane tutaj, aby łatwo je było odnaleźć ponownie później.",
-    "dashboard.index.license.title": "Kirby license",
-    "metatags": "Metadane strony",
+    "dashboard.index.license.title": "Licencja Kirby",
+    "metatags": "Ustawienia serwisu",
     "metatags.info": "Kirby info",
-    "metatags.license": "Kirby license",
+    "metatags.license": "Licencja Kirby",
     "metatags.version.toolkit": "Toolkit version",
     "metatags.version.kirby": "Kirby version",
     "metatags.version.panel": "Panel version",
     "metatags.back": "Powróć do panelu administracyjnego",
     "metatags.files": "Site files",
-    "site.delete.error": "The site cannot be deleted",
+    "site.delete.error": "Strona nie może zostać usunięta",
     "pages.show.settings": "Ustawienia strony",
     "pages.show.preview": "Otwórz podgląd",
     "pages.show.changeurl": "Zmień URL",
-    "pages.show.invisible": "Status: invisible",
-    "pages.show.visible": "Status: visible",
-    "pages.show.changes.text": "You have unsaved changes!",
+    "pages.show.invisible": "Status: niewidzialna",
+    "pages.show.visible": "Status: widoczna",
+    "pages.show.changes.text": "Masz niezapisane zmiany!",
     "pages.show.changes.button": "Discard",
     "pages.show.delete": "Usuń tę stronę",
     "pages.show.subpages.title": "Strony",
-    "pages.show.subpages.edit": "Edit",
+    "pages.show.subpages.edit": "Edytuj",
     "pages.show.subpages.add": "Dodaj",
     "pages.show.subpages.empty": "Ta strona nie posiada podstron",
     "pages.show.files.title": "Pliki",
-    "pages.show.files.edit": "Edit",
+    "pages.show.files.edit": "Edytuj",
     "pages.show.files.add": "Dodaj",
     "pages.show.files.empty": "Ta strona nie posiada plików",
     "pages.show.error.permissions.title": "Nie ma uprawnień do zapisu dla tej strony",
@@ -91,7 +91,7 @@
     "pages.add.url.close": "Zamknij",
     "pages.add.url.help": "Formatowanie: małe litery a-z, 0-9 i myślnik",
     "pages.add.template.label": "Szablon",
-    "pages.add.error.create": "The page could not be created",
+    "pages.add.error.create": "Strona nie może zostać utworzona",
     "pages.add.error.title": "Brakuje tytułu",
     "pages.add.error.template": "Brakuje szablonu",
     "pages.add.error.max.headline": "Nie można dodać nowej strony",
@@ -100,13 +100,13 @@
     "pages.url.uid.label.option": "Utwórz na podstawie tytułu",
     "pages.url.error.exists": "Strona z takim apendyksem już istnieje",
     "pages.url.error.move": "Apendyks nie mógł zostać zmieniony",
-    "pages.url.error.rights": "You cannot change the URL of this page",
-    "pages.url.home.error.error": "The URL for the home and error pages cannot be changed",
+    "pages.url.error.rights": "Nie możesz zmienić adres URL tej strony",
+    "pages.url.home.error.error": "Adres URL dla strony głównej i błędu nie może być zmieniona",
     "pages.toggle.position": "Position",
-    "pages.toggle.invisible": "invisible",
-    "pages.toggle.publish": "Do you really want to change the status of this page to **visible?**",
-    "pages.toggle.hide": "Do you really want to change the status of this page to **invisible?**",
-    "pages.toggle.error.error": "The status of the error page cannot be changed",
+    "pages.toggle.invisible": "niewidoczny",
+    "pages.toggle.publish": "Czy na pewno chcesz zmienić status strony na **widoczna**",
+    "pages.toggle.hide": "Czy na pewno chcesz zmienić status strony na **niewidzialna**",
+    "pages.toggle.error.error": "Status dla strony błędu nie może zostać zmieniony",
     "pages.delete.headline": "Czy na pewno chcesz usunąć tę stronę?",
     "pages.delete.error.home.headline": "Strona główna nie może zostać usunięta",
     "pages.delete.error.home.text": "Próbujesz skasować stronę główną. To nie jest możliwe i prowadziłoby do niepożądanych skutków.",
@@ -129,8 +129,8 @@
     "subpages.index.visible.help": "Przeciągnij tutaj niewidzialne strony, by zmienić kolejność/sprawić, żeby były widzialne.",
     "subpages.index.invisible": "Niewidzialne strony",
     "subpages.index.invisible.help": "Przeciągnij tutaj widzialne strony, aby sprawić, żeby były niewidzialne.",
-    "subpages.add.error": "This page is not allowed to have subpages",
-    "subpages.add.error.more": "This page cannot have any more subpages",
+    "subpages.add.error": "Ta strona nie może mieć podstron",
+    "subpages.add.error.more": "Ta strona nie może mieć więcej podstron",
     "subpages.error.missing": "Strona nie została odnaleziona",
     "files": "Pliki",
     "files.index.headline": "Pliki dla",
@@ -140,13 +140,13 @@
     "files.index.upload.first.button": "Dodaj pierwszy plik",
     "files.index.edit": "Edytuj",
     "files.index.delete": "Usuń",
-    "files.index.error.disabled": "The page is not allowed to have any files",
-    "files.add.error.max": "The maximum number of files for the current page has been reached.",
-    "files.add.error.extension.missing": "You cannot upload files without extension",
+    "files.index.error.disabled": "Strona nie może mieć żadnych plików",
+    "files.add.error.max": "Maksymalna liczba plików dla bieżącej stronie został osiągnięty.",
+    "files.add.error.extension.missing": "Nie można przesyłać plików bez rozszerzenia",
     "files.add.error.extension.forbidden": "Forbidden file extension",
     "files.add.error.mime.forbidden": "Forbidden mime type",
-    "files.add.error.htaccess": "htaccess files cannot be uploaded",
-    "files.add.error.invisible": "Invisible files cannot be uploaded",
+    "files.add.error.htaccess": "Plik htaccess nie może być przesłany",
+    "files.add.error.invisible": "Pliki ukryte nie mogą być przesłane",
     "files.add.blueprint.type.error": "Page only allows:",
     "files.add.blueprint.size.error": "Page only allows file size of",
     "files.show.name.label": "Nazwa pliku",
@@ -196,25 +196,25 @@
     "users.form.back": "Wróć do użytkowników",
     "users.form.error.password.confirm": "Potwierdź hasło",
     "users.form.error.update": "Użytkownik nie mógł zostać zaktualizowany",
-    "users.form.error.update.rights": "You are not allowed to update this user",
+    "users.form.error.update.rights": "Nie masz uprawnień do aktualizacji tego użytkownika",
     "users.form.error.create": "Użytkownik nie mógł zostać utworzony",
     "users.form.error.permissions.title": "Folder account nie ma praw do zapisu",
     "users.form.error.permissions.text": "Upewnij się, że folder /site/accounts istnieje i posiada prawa do zapisu.",
     "users.delete.headline": "Czy na pewno chcesz usunąć tego użytkownika?",
     "users.delete.error": "Użytkownik nie mógł zostać usunięty",
-    "users.delete.error.permission": "You are not allowed to delete users",
-    "users.delete.error.permission.single": "You are not allowed to delete this user",
-    "users.delete.error.lastadmin": "You cannot delete the last admin",
+    "users.delete.error.permission": "Nie masz uprawnień do usuwania użytkowników",
+    "users.delete.error.permission.single": "Nie masz uprawnień do usunięcia tego użytkownika",
+    "users.delete.error.lastadmin": "Nie możesz usunąć jedynego administratora",
     "users.avatar.drop": "Upuść zdjęcie profilowe tutaj…",
     "users.avatar.click": "…lub kliknij, aby załadować",
     "users.avatar.error.type": "Możesz wgrać tylko pliki JPG, PNG i GIF",
     "users.avatar.error.folder.headline": "Folder avatar nie ma praw do zapisu",
     "users.avatar.error.folder.text": "Utwórz folder <strong>/assets/avatars</strong> i nadaj mu prawa do zapisu, by móc dodawać zdjęcia profilowe.",
-    "users.avatar.error.permission": "You are not allowed to change the avatar",
+    "users.avatar.error.permission": "Nie masz uprawnień, aby zmienić awatar",
     "users.avatar.delete.error": "Zdjęcie profilowe nie mogło zostać usunięte",
-    "users.avatar.delete.error.permission": "You are not allowed to delete the avatar of this user",
+    "users.avatar.delete.error.permission": "Nie masz uprawnień, aby usunąć awatar użytkownika",
     "users.avatar.delete.success": "Zdjęcie profilowe zostało usunięte",
-    "users.avatar.missing": "This user has no avatar",
+    "users.avatar.missing": "Ten użytkownik nie ma awataru",
     "users.error.missing": "Użytkownik nie został odnaleziony",
     "user.error.lastadmin": "You are the only admin. This cannot be changed.",
     "form.error.missing": "The form cannot be found",
@@ -268,7 +268,7 @@
     "fields.structure.save": "Zapisz",
     "fields.structure.edit": "Edytuj",
     "fields.structure.delete": "Usuń",
-    "fields.structure.delete.label": "Do you really want to delete this entry?",
+    "fields.structure.delete.label": "Czy na pewno chcesz usunąć ten wpis?",
     "fields.tags.label": "Tagi",
     "fields.tel.label": "Telefon",
     "fields.textarea.buttons.bold.label": "Pogrubiony tekst",
