--- a/app/translations/pt_BR/core.json
+++ b/app/translations/pt_BR/core.json
@@ -1,17 +1,17 @@
 {
     "cancel": "Cancelar",
     "add": "Adicionar",
-    "addit": "Add & Edit",
+    "addit": "Adicionar & Editar",
     "save": "Salvar",
     "saved": "Salvo!",
-    "change": "Change",
+    "change": "Alterar",
     "delete": "Deletar",
     "insert": "Inserir",
     "ok": "Ok",
-    "routes.error.invalid": "Invalid Panel URL",
-    "controller.error.invalid": "Invalid controller",
-    "controller.error.action": "Invalid action",
-    "view.error.invalid": "Invalid view:",
+    "routes.error.invalid": "URL do Painel inválida",
+    "controller.error.invalid": "Controller inválido",
+    "controller.error.action": "Ação inválida",
+    "view.error.invalid": "View inválida: ",
     "options.show": "Exibir opções",
     "options.hide": "Ocultar opções",
     "installation": "Instalação",
@@ -37,9 +37,9 @@
     "login.password.label": "Senha",
     "login.error": "Usuário ou senha inválido",
     "login.button": "Entrar",
-    "login.log.error.permissions": "Login log file is not writable.",
+    "login.log.error.permissions": "O arquivo de log do login não tem permissão de escrita ",
     "logout": "Sair",
-    "topbar.error.class.definition": "Missing topbar definition for class:",
+    "topbar.error.class.definition": "Definição \"topbar\" não existe para classe: ",
     "dashboard": "Painel",
     "dashboard.index.pages.title": "Páginas",
     "dashboard.index.pages.edit": "Editar",
@@ -51,23 +51,23 @@
     "dashboard.index.metatags.edit": "Editar",
     "dashboard.index.history.title": "Atualizações recentes",
     "dashboard.index.history.text": "Últimas páginas modificadas serão exibidas aquí para facilitar seu acesso futuro.",
-    "dashboard.index.license.title": "Kirby license",
+    "dashboard.index.license.title": "Licença do Kirby",
     "metatags": "Variáveis do site",
-    "metatags.info": "Kirby info",
-    "metatags.license": "Kirby license",
-    "metatags.version.toolkit": "Toolkit version",
-    "metatags.version.kirby": "Kirby version",
-    "metatags.version.panel": "Panel version",
+    "metatags.info": "Informações do Kirby",
+    "metatags.license": "Licença do Kirby ",
+    "metatags.version.toolkit": "Versão do Toolkit",
+    "metatags.version.kirby": "Versão do Kirby",
+    "metatags.version.panel": "Versão do Painel",
     "metatags.back": "Voltar ao Painel",
-    "metatags.files": "Site files",
-    "site.delete.error": "The site cannot be deleted",
+    "metatags.files": "Arquivos do site",
+    "site.delete.error": "Este site não pode ser deletado",
     "pages.show.settings": "Configurações de página",
     "pages.show.preview": "Abrir preview",
     "pages.show.changeurl": "Mudar URL",
-    "pages.show.invisible": "Status: invisible",
-    "pages.show.visible": "Status: visible",
-    "pages.show.changes.text": "You have unsaved changes!",
-    "pages.show.changes.button": "Discard",
+    "pages.show.invisible": "Status: invisível",
+    "pages.show.visible": "Status: visível",
+    "pages.show.changes.text": "Você possui alterações não salvas!",
+    "pages.show.changes.button": "Descartar",
     "pages.show.delete": "Deletar esta página",
     "pages.show.subpages.title": "Páginas",
     "pages.show.subpages.edit": "Editar",
@@ -91,7 +91,7 @@
     "pages.add.url.close": "Fechar",
     "pages.add.url.help": "Formato: a-z minúsculas, 0-9 e hífens",
     "pages.add.template.label": "Template",
-    "pages.add.error.create": "The page could not be created",
+    "pages.add.error.create": "A página não pode ser criada",
     "pages.add.error.title": "Falta o título",
     "pages.add.error.template": "Falta o template",
     "pages.add.error.max.headline": "Não se permite novas páginas",
@@ -100,13 +100,13 @@
     "pages.url.uid.label.option": "Criar a partir do título",
     "pages.url.error.exists": "Uma página com mesmo apêndice já existe",
     "pages.url.error.move": "O apêndice não pôde ser alterado",
-    "pages.url.error.rights": "You cannot change the URL of this page",
-    "pages.url.home.error.error": "The URL for the home and error pages cannot be changed",
-    "pages.toggle.position": "Position",
-    "pages.toggle.invisible": "invisible",
-    "pages.toggle.publish": "Do you really want to change the status of this page to **visible?**",
-    "pages.toggle.hide": "Do you really want to change the status of this page to **invisible?**",
-    "pages.toggle.error.error": "The status of the error page cannot be changed",
+    "pages.url.error.rights": "Você não pode alterar a URL desta página",
+    "pages.url.home.error.error": "As URLs das páginas \"home\" e \"error\" não podem ser alteradas",
+    "pages.toggle.position": "Posição",
+    "pages.toggle.invisible": "Invisível",
+    "pages.toggle.publish": "Quer mesmo mudar o status desta página para **visível?**",
+    "pages.toggle.hide": "Quer mesmo mudar o status desta página para **invisível?**",
+    "pages.toggle.error.error": "O status da página de erro não pode ser alterado",
     "pages.delete.headline": "Quer mesmo deletar esta página?",
     "pages.delete.error.home.headline": "A página \"home\" não pode ser deletada",
     "pages.delete.error.home.text": "Você está tentando deletar a página \"home\". O que não é possível e podería causar efeitos indesejados.",
@@ -129,8 +129,8 @@
     "subpages.index.visible.help": "Arraste as páginas invisíveis aquí para ordenar/torna-las visíveis.",
     "subpages.index.invisible": "Páginas invisíveis",
     "subpages.index.invisible.help": "Arraste as páginas visíveis aquí para desordenar/torna-las invisíveis",
-    "subpages.add.error": "This page is not allowed to have subpages",
-    "subpages.add.error.more": "This page cannot have any more subpages",
+    "subpages.add.error": "Esta página não pode ter sub-páginas  ",
+    "subpages.add.error.more": "Esta página não pode ter mais sub-páginas  ",
     "subpages.error.missing": "Página não encontrada",
     "files": "Arquivos",
     "files.index.headline": "Arquivos para",
@@ -140,15 +140,15 @@
     "files.index.upload.first.button": "Suba o primeiro arquivo",
     "files.index.edit": "Editar",
     "files.index.delete": "Deletar",
-    "files.index.error.disabled": "The page is not allowed to have any files",
-    "files.add.error.max": "The maximum number of files for the current page has been reached.",
-    "files.add.error.extension.missing": "You cannot upload files without extension",
-    "files.add.error.extension.forbidden": "Forbidden file extension",
-    "files.add.error.mime.forbidden": "Forbidden mime type",
-    "files.add.error.htaccess": "htaccess files cannot be uploaded",
-    "files.add.error.invisible": "Invisible files cannot be uploaded",
-    "files.add.blueprint.type.error": "Page only allows:",
-    "files.add.blueprint.size.error": "Page only allows file size of",
+    "files.index.error.disabled": "Esta página não pode ter nenhum arquivo",
+    "files.add.error.max": "O numero máximo de arquivos desta página foi atingido.",
+    "files.add.error.extension.missing": "Você não pode subir arquivos sem extensão ",
+    "files.add.error.extension.forbidden": "Extensão de arquivo não permitida",
+    "files.add.error.mime.forbidden": "\"mime type\" não permitido",
+    "files.add.error.htaccess": "Arquivos \"htaccess\" não podem ser subidos",
+    "files.add.error.invisible": "Arquivos invisíveis não podem ser subidos",
+    "files.add.blueprint.type.error": "Esta página permite apenas: ",
+    "files.add.blueprint.size.error": "Esta página permite arquivos com tamanho de ",
     "files.show.name.label": "Nome do arquivo",
     "files.show.info.label": "Tipo / Tamanho / Dimensões",
     "files.show.link.label": "Link público",
@@ -196,29 +196,29 @@
     "users.form.back": "Voltar para usuários",
     "users.form.error.password.confirm": "Favor confirmar a senha",
     "users.form.error.update": "O usuário não pode ser atualizado",
-    "users.form.error.update.rights": "You are not allowed to update this user",
+    "users.form.error.update.rights": "Você não tem permissão para atualizar este usuário",
     "users.form.error.create": "O usuário não pode ser criado",
     "users.form.error.permissions.title": "A pasta \"account\" não tem permissão de escrita",
     "users.form.error.permissions.text": "Favor se certificar que /site/accounts existe e possui permissão de escrita.",
     "users.delete.headline": "Quer mesmo deletar este usuário?",
     "users.delete.error": "Este usuário nao pode ser deletado",
-    "users.delete.error.permission": "You are not allowed to delete users",
-    "users.delete.error.permission.single": "You are not allowed to delete this user",
-    "users.delete.error.lastadmin": "You cannot delete the last admin",
+    "users.delete.error.permission": "Você não tem permissão para deletar usuários",
+    "users.delete.error.permission.single": "Você não tem permissão para deletar este usuário ",
+    "users.delete.error.lastadmin": "Você não pode deletar o último usuário administrador ",
     "users.avatar.drop": "Arraste a foto do perfil aquí…",
     "users.avatar.click": "…ou clique para subir",
     "users.avatar.error.type": "Você pode subir somente arquivos JPG, PNG and GIF",
     "users.avatar.error.folder.headline": "A pasta \"avatar\" não tem permissão de escrita",
     "users.avatar.error.folder.text": "Favor criar a pasta <strong>/assets/avatars</strong> e permita que seja escrita para subir fotos do perfil.",
-    "users.avatar.error.permission": "You are not allowed to change the avatar",
+    "users.avatar.error.permission": "Você não pode alterar o avatar",
     "users.avatar.delete.error": "A foto do perfil não pode ser deletada",
-    "users.avatar.delete.error.permission": "You are not allowed to delete the avatar of this user",
+    "users.avatar.delete.error.permission": "Você não tem permissão para deletar o avatar deste usuário",
     "users.avatar.delete.success": "A foto do perfil foi deletada",
-    "users.avatar.missing": "This user has no avatar",
+    "users.avatar.missing": "Este usuário não possui avatar",
     "users.error.missing": "Usuário não encontrado",
-    "user.error.lastadmin": "You are the only admin. This cannot be changed.",
-    "form.error.missing": "The form cannot be found",
-    "form.construct.error.invalid": "Invalid form construction method",
+    "user.error.lastadmin": "Você é o único administrador. Isto não pode ser alterado.",
+    "form.error.missing": "O formulário não foi encontrado ",
+    "form.construct.error.invalid": "Método inválido de construção de formulário ",
     "fields.required": "Requerido",
     "fields.date.label": "Data",
     "fields.date.months": [
@@ -263,12 +263,12 @@
     "fields.structure.add": "Adicionar",
     "fields.structure.add.first": "Adicionar primeira entrada",
     "fields.structure.empty": "Sem entradas ainda.",
-    "fields.structure.entry.error": "The item could not be found",
+    "fields.structure.entry.error": "Item não encontrado ",
     "fields.structure.cancel": "Cancelar",
     "fields.structure.save": "Salvar",
     "fields.structure.edit": "Editar",
     "fields.structure.delete": "Deletar",
-    "fields.structure.delete.label": "Do you really want to delete this entry?",
+    "fields.structure.delete.label": "Quer mesmo deletar esta entrada?",
     "fields.tags.label": "Tags",
     "fields.tel.label": "Fone",
     "fields.textarea.buttons.bold.label": "Texto negrito",
@@ -283,10 +283,10 @@
     "fields.toggle.no": "Não",
     "fields.toggle.on": "Ligado",
     "fields.toggle.off": "Desligado",
-    "fields.error.missing.controller": "The field controller file is missing",
-    "fields.error.missing.class": "The field controller class is missing",
-    "fields.error.route.invalid": "Invalid field route",
-    "fields.error.extended": "The field cannot be extended",
+    "fields.error.missing.controller": "O arquivo do \"field controller\" não foi encontrado  ",
+    "fields.error.missing.class": "A classe do \"field controller\" não foi encontrada ",
+    "fields.error.route.invalid": "\"field route\" inválida ",
+    "fields.error.extended": "O \"field\" não pode ser extendido ",
     "editor.link.url.label": "Inserir URL",
     "editor.link.text.label": "Texto do link",
     "editor.link.text.help": "O texto do link é opcional",
@@ -296,8 +296,8 @@
     "editor.email.text.help": "O texto do link é opcional",
     "editor.file.empty": "Esta página não tem arquivos",
     "editor.image.empty": "Esta página não tem imagens",
-    "autocomplete.method.error": "Invalid autocomplete method",
-    "blueprints.error.default.missing": "Missing default blueprint",
+    "autocomplete.method.error": "Método de auto-completar inválido",
+    "blueprints.error.default.missing": "Blueprint \"default\" não encontrada ",
     "error": "Erro",
     "error.headline": "Erro"
 }
